fix: sacar las consultas del hilo de la interfaz (#44)