@@ -36,7 +36,7 @@ public class CajeroPagoController {
     @FXML private Button cerrarPagoButton;
 
     private final PagoDAO pagoDAO = new PagoDAO();
-    private final NumberFormat moneda = NumberFormat.getCurrencyInstance(new Locale("es", "CO"));
+    private final NumberFormat moneda = NumberFormat.getCurrencyInstance(Locale.of("es", "CO"));
 
     private CuentaPago cuentaActual;
 
